# pseudocode-compiler

./: CMakeLists.txt  README.md  build-and-run.sh
docs/language_design/: syntax_tree.skt
docs/v1.0/: README.md
headers/: ast.hpp  lexer.hpp
sources/: ast.cpp  lexer.cpp  main.cpp
